--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="json-lib-2.3-jdk15.jar"/>
+	<classpathentry kind="lib" path="commons-lang-2.5.jar"/>
+	<classpathentry kind="lib" path="ezmorph-1.0.2.jar"/>
+	<classpathentry kind="lib" path="commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="commons-beanutils-1.8.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
